# turbo-translate

./: README.md  config.example.json  pyproject.toml
docker/: .env.example  docker-compose.yml  env-vars-to-add.txt  services-to-add.yml
docker/diarization/: Dockerfile  app.py
docker/tts/: Dockerfile  app.py
scripts/: deploy-backend.sh
src/turbo_translate/: __init__.py  api.py  audio_player.py  config.py  hotkey.py  icons.py  main.py  recorder.py  settings_dialog.py  transcript_panel.py  waveform.py
