[project]
name = "turbo-translate"
version = "0.1.0"
description = "Real-time multilingual speech translation with speaker diarization"
authors = [{ name = "KnowAll AI", email = "ben.weeks@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "pynput>=1.7.6",
    "python-xlib>=0.33",
    "pyautogui>=0.9.54",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
windows = ["pyperclip>=1.8.0"]
linux = ["evdev>=1.6.0"]
wayland = ["dbus-python>=1.3.0", "PyGObject>=3.42.0", "evdev>=1.6.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
turbo-translate = "turbo_translate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbo_translate"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.per-file-ignores]
"src/turbo_translate/icons.py" = ["E501"]
